@@ -1,3 +1,6 @@
+2010-10-07  Stipe Tolj  <stolj at kannel.org>
+    * gw/sqlbox_[pgsql|sqlite3].c: more compiler warning fixes.
+    
 2010-10-06  Stipe Tolj  <stolj at kannel.org>
     * gw/sqlbox.c, gw/sqlbox_[pgsql|sqlite3].c: fixed various compiler warnings.
 
